petname (1.5) unreleased; urgency=medium

  * usr/bin/petname:
    - ensure that the binary can run from local source checkout

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 14:28:31 -0600

petname (1.4-0ubuntu1) vivid; urgency=medium

  * usr/lib/petname/names.txt:
    - remove some religious figures

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 14:28:29 -0600

petname (1.3-0ubuntu1) vivid; urgency=medium

  * README.md:
    - update docs to point to pypi and pip install instructions
    - add apt-get install instructions

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 14:05:41 -0600

petname (1.2-0ubuntu1) vivid; urgency=medium

  * usr/bin/petname, usr/lib/petname/petname.sh:
    - simplify our shell functions to just output rather than $_RET

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 13:23:39 -0600

petname (1.1-0ubuntu1) vivid; urgency=medium

  * debian/copyright, README.md:
    - update readme, add local location of license
  * debian/copyright, debian/petname.install => debian/install,
    usr/bin/petname, usr/lib/petname/petname.sh:
    - install README, which is used by downstream packages
    - move functions to common library
    - use common library in shell script

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 12:33:51 -0600

petname (1.0-0ubuntu1) vivid; urgency=medium

  * === added directory usr, === added directory usr/bin, === added
    directory usr/lib, === added directory usr/lib/petname,
    adjectives.txt => usr/lib/petname/adjectives.txt, adverbs.txt =>
    usr/lib/petname/adverbs.txt, cmd/petname/main.go, debian/control,
    debian/golang-petname-dev.install, debian/petname.install,
    debian/python-petname.install, debian/rules, __init__.py, Makefile,
    names.txt => usr/lib/petname/names.txt, petname.go, petname.go.in,
    petname/petname.py, petname/petname.py.in, petname_test.go, ===
    removed directory cmd, === removed directory cmd/petname, ===