@@ -2,6 +2,14 @@ petname (1.5) unreleased; urgency=medium
 
   * usr/bin/petname:
     - ensure that the binary can run from local source checkout
+  * === added directory usr/share/petname, debian/rules, === removed
+    directory usr/lib, === removed directory usr/lib/petname,
+    usr/bin/petname, usr/lib/petname/adjectives.txt =>
+    usr/share/petname/adjectives.txt, usr/lib/petname/adverbs.txt =>
+    usr/share/petname/adverbs.txt, usr/lib/petname/names.txt =>
+    usr/share/petname/names.txt, usr/lib/petname/petname.sh =>
+    usr/share/petname/petname.sh:
+    - this is architecture independent, so move lib -> share
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 16 Dec 2014 14:28:31 -0600
 
